force-app/main/default/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Kompass_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Extenal Id for Kompass Id</description>
        <externalId>true</externalId>
        <label>Kompass Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party</fullName>
                </value>
                <value>
                    <fullName>3rd Party Referral</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Client Referral</fullName>
                </value>
                <value>
                    <fullName>Contract Development</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Government Procurement Process</fullName>
                </value>
                <value>
                    <fullName>Incoming Call</fullName>
                </value>
                <value>
                    <fullName>Operational Referral</fullName>
                </value>
                <value>
                    <fullName>Sales Referral</fullName>
                </value>
                <value>
                    <fullName>Self-generated</fullName>
                </value>
                <value>
                    <fullName>Teleappointing</fullName>
                </value>
                <value>
                    <fullName>Telemarketing</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Website / Email</fullName>
                </value>
                <value>
                    <fullName>Business development</fullName>
                </value>
                <value>
                    <fullName>FOI</fullName>
                </value>
                <value>
                    <fullName>Office Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Kompass</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VAT_Number__c</fullName>
        <description>Numéro de TVA intracommunautaire</description>
        <label>VAT Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>